<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="0dp" >

        <EditText
            android:id="@+id/txtSignUpSingleFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_single_firstname"
            android:textSize="16sp"  />

        <EditText
            android:id="@+id/txtSignUpSingleLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_single_lastname"
            android:textSize="16sp"  />

        <EditText
            android:id="@+id/txtSignUpSingleEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_single_email"
            android:inputType="textEmailAddress"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txtSignUpSinglePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_single_password"
            android:inputType="textPassword"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txtSignUpSinglePasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_single_confirm_password"
            android:inputType="textPassword"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spSignUpSingleCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/cities"
            android:textSize="16sp" />

        <!-- android:entries="@array/cities" -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lblSignUpSingleAnon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_single_anon"
                android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="16sp" />

            <ToggleButton
                android:id="@+id/tbSignUpSingleAnon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_alignParentBottom="true"
        android:text="@string/signup_single_createaccount" />

</RelativeLayout>