<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp" >

    <EditText
        android:id="@+id/txtSignUpSingleFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/signup_single_firstname" />

    <EditText
        android:id="@+id/txtSignUpSingleLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/signup_single_lastname" />

    <EditText
        android:id="@+id/txtSignUpSinglePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/signup_single_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/txtSignUpSingleEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/signup_single_email"
        android:inputType="textEmailAddress" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lblSignUpSingleAnon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_single_anon"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ToggleButton
            android:id="@+id/txtSignUpSingleAnon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Anonimato" />

    </LinearLayout>

    <Spinner
        android:id="@+id/txtSignUpSingleCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/cities" />

</LinearLayout>
