<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:label="@string/app_name"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
    tools:context="pt.ua.doarmais.WelcomeActivity$PlaceholderFragment" >

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:scaleType="fitStart"
        android:src="@drawable/doarmais_medium" />

    <!-- android:textColor="#454545" -->


    <Button
        android:id="@+id/btnRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtWelcomeLogin"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="15dp"
        android:text="@string/action_register" />
    

    <TextView
        android:id="@+id/txtWelcomeLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/welcome_login"
        android:textAlignment="center"
        android:textColor="#222222"
        android:textSize="15sp" />

</RelativeLayout>